--- a/src/pages/dashBoard/index.css
+++ b/src/pages/dashBoard/index.css
@@ -12,10 +12,9 @@ body{
 .pageGrid{
     display:grid;
     flex-shrink: 1;
-    grid-template-columns:350px 3fr 1fr;
-    grid-template-rows: 30rem;
+    grid-template-columns:repeat(3,auto-fit);
     grid-template-areas: 
-"nav  header TimeTable "
+"nav  hdr TimeTable "
 "nav main TimeTable"
 "nav main TimeTable";
    
@@ -23,30 +22,32 @@ body{
 .table{
     border-spacing: 20px;
 }
+/* ===============================styles of item 1========================================== */
 .item1{
-position: relative;;
-    grid-area:nav;
-    padding: 15rem 0 0 0rem;
-    text-align: center;
-    font-weight:500;
+grid-area:nav;
+ display: flex;
+ flex-direction: column;
+ background: lightblue;
+padding-left: 2rem;
 }
+.Icon-Image{
+    background-image: url("../../components/images/logo_3-removebg-preview.png");
+    width: 6rem;
+    height: 6rem;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  
+};
 
-.navLI li{
-    display: flex;
-    height:5.5rem;
-   color:black;
-   padding:1.5rem 3rem 2rem 4rem;
-   font-size: 1.5rem;
-   width: 80%;
+nav{
+    height:"100%";
+  
 }
-.navLI li:hover{
-   color:rgba(121,50,128);
-}
-.headingDashboard{
-    width:150px;
-}
+/* ==============================   ============================================================== */
+
 .item2{
-  grid-area: header;
+  grid-area: hdr;
   padding: 2rem ;
   display:flex;
   flex-direction: column;
@@ -67,14 +68,7 @@ position: relative;;
     padding:3rem 0;
 
 }
-.calander{
-    display: flex;
-    height: 80rem;
-    flex-direction: column;
-    overflow: hidden;
-justify-content: space-evenly;
-    margin-top: 2rem;
-}
+
 
 .item5{
  margin-top: 2rem;
@@ -97,27 +91,23 @@ justify-content: space-evenly;
     box-shadow: 2px 2px 5px gray;
 
 }
-.wave{
-    position: relative;
-    width:100%;
-    height:10rem;
-    background-image: url("../../imagess/wave.svg");
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    bottom: -5rem;
+.boxLine{
+    height:0.5rem;
+display: flex;
+    flex-direction: column-reverse;
+    background-Color:white;
+    border-radius: 1rem;
 }
-.wave2{
-    position: relative;
-    width:100%;
-    height:9rem;
-    background-image: url("../../imagess/wave.svg");
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-transform: rotate(200px);
-    bottom: 3em;
-}
+
+.boxLine:before{
+    content: "Tasks % ";
+   align-self: baseline;
+    color: white;
+    font-weight: bold;
+height: 60px;
+  
+ }
+
 .tableLine{
     height:auto;
     width:1rem;
@@ -125,10 +115,12 @@ transform: rotate(200px);
     background: rgb(122,56,112)
   }
 
-
-@media only screen and (max-width: 1000px){
-    .table{
-      background-color: blue;
+/*
+min-with can not go below se amount e.g 100px  
+*/
+@media only screen and (min-width: 800px){
+    body{
+      /* background-color: blue; */
     }
   }
 
