--- a/src/pages/dashBoard/index.css
+++ b/src/pages/dashBoard/index.css
@@ -42,7 +42,7 @@ padding-left: 2rem;
     background-image: url("../../components/images/logo_3-removebg-preview.png");
     width: 6rem;
     height: 6rem;
-    background-position: center;
+    background-position:center;
     background-size: contain;
     background-repeat: no-repeat;
   
@@ -94,7 +94,9 @@ height: 100%;
 
 .statistics-boxes-container{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    align-self:end;
+width: 100%;
     
 }
 
@@ -107,7 +109,6 @@ height: 100%;
     justify-content: space-around;
     font-size: 16px;
     border-radius: 0.5rem;
-    box-shadow: 2px 2px 10px lightgray;
     background: #F5F3F4;
 
 }
@@ -119,6 +120,14 @@ height: 100%;
     height:100%;
     border-radius: 10px 0 0 10px;
     
+}
+.welcomeBlock{
+    height:200px;
+    width:100%;
+display: flex;
+justify-content: space-between;
+    border-radius: 0.5rem;
+    box-shadow: 2px 2px 10px lightgray;
 }
 /*
 =====================================
