--- a/src/pages/dashBoard/index.css
+++ b/src/pages/dashBoard/index.css
@@ -36,8 +36,17 @@ grid-area:nav;
  display: flex;
  flex-direction: column;
  background: lightblue;
-padding-left: 2rem;
+line-height: 1.5rem;
 }
+.item1 li{
+display:flex;
+}
+.item1 li span{
+    font-size: medium;
+    font-weight: 500;
+margin: 0 0 0 10px;
+}
+
 .Icon-Image{
     background-image: url("../../components/images/logo_3-removebg-preview.png");
     width: 6rem;
