--- a/src/pages/dashBoard/index.css
+++ b/src/pages/dashBoard/index.css
@@ -34,12 +34,33 @@ height: auto;
 .item1{
 grid-area:nav;
  display: flex;
+ position: relative;
  flex-direction: column;
- background: lightblue;
 line-height: 1.5rem;
+color:#793280;
+
+}
+.grayLine{
+    position: absolute;
+    height: 40rem;
+    width:0.2rem;
+    background:lightgray;
+    top :40px;
+    right:-1rem
+}
+.item1::after{
+    content:"";
+    display:block;
+    background-image:url("../../imagess/wave.svg");
+    width: 100%;
+    height: 100%;
+    background-position:center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .item1 li{
 display:flex;
+justify-content: center;
 }
 .item1 li span{
     font-size: medium;
